data/derived/comb/progs/unify/prog0840.ml.out
Characters 77-90:
  | h::t -> clone t (n-1) :: h;;
            ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
